--- a/src/bibliography.bib
+++ b/src/bibliography.bib
@@ -193,7 +193,7 @@ numpages = {33}
   year={1999},
   publisher={Addison-Wesley Professional}
 }
-@ARTICLE{TSapces,  author={P. {Wyckoff} and S. W. {McLaughry} and T. J. {Lehman} and D. A. {Ford}},  journal={IBM Systems Journal},   title={T Spaces},   year={1998},  volume={37},  number={3},  pages={454-474},}
+@ARTICLE{TSpaces,  author={P. {Wyckoff} and S. W. {McLaughry} and T. J. {Lehman} and D. A. {Ford}},  journal={IBM Systems Journal},   title={T Spaces},   year={1998},  volume={37},  number={3},  pages={454-474},}
 @article{Lime,
 author = {Murphy, Amy L. and Picco, Gian Pietro and Roman, Gruia-Catalin},
 title = {LIME: A Coordination Model and Middleware Supporting Mobility of Hosts and Agents},
@@ -283,3 +283,232 @@ pages = {131–146},
 numpages = {16}
 }
 @ARTICLE{Proto,  author={J. {Beal} and J. {Bachrach}},  journal={IEEE Intelligent Systems},   title={Infrastructure for engineered emergence on sensor/actuator networks},   year={2006},  volume={21},  number={2},  pages={10-19},}
+@article{LawGov,
+author = {Minsky, Naftaly H. and Ungureanu, Victoria},
+title = {Law-Governed Interaction: A Coordination and Control Mechanism for Heterogeneous Distributed Systems},
+year = {2000},
+issue_date = {July 2000},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {9},
+number = {3},
+issn = {1049-331X},
+url = {https://doi.org/10.1145/352591.352592},
+doi = {10.1145/352591.352592},
+journal = {ACM Trans. Softw. Eng. Methodol.},
+month = jul,
+pages = {273–305},
+numpages = {33},
+keywords = {coordination of heterogeneous agents, scalability, policy enforcement}
+}
+@ARTICLE{Mars,  author={G. {Cabri} and L. {Leonardi} and F. {Zambonelli}},  journal={IEEE Internet Computing},   title={MARS: a programmable coordination architecture for mobile agents},   year={2000},  volume={4},  number={4},  pages={26-35},}
+@article{Respect,
+	Author = {Omicini, Andrea and Denti, Enrico},
+	Date-Added = {2010-09-13 01:52:36 +0200},
+	Date-Modified = {2010-09-13 01:52:36 +0200},
+	Issn = {0167-6423},
+	Journal = {Science of Computer Programming},
+	_Month = November,
+	Number = 3,
+	Pages = {277--294},
+	Publisher = {Elsevier Science B. V.},
+	Title = {From Tuple Spaces to Tuple Centres},
+	Volume = 41,
+	Year = 2001}
+@inproceedings{logop,
+  author    = {Ronaldo Menezes and
+               Jim Snyder},
+  title     = {Coordination of Distributed Components Using {LogOp}},
+  booktitle = {International Conference on Parallel and Distributed
+               Processing Techniques and Applications ({PDPTA})},
+  volume = {1},
+ _month = {June},
+  pages     = {109--114},
+  year      = {2003},
+  _editor    = {Hamid R. Arabnia and
+               Youngsong Mun},
+  publisher = {{CSREA} Press},
+  isbn      = {1-892512-41-6}
+  }
+@inproceedings{merrick2000scoped,
+  title={Scoped coordination in open distributed systems},
+  author={Merrick, Iain and Wood, Alan},
+  booktitle={International Conference on Coordination Languages and Models},
+  pages={311--316},
+  year={2000},
+  organization={Springer}
+}
+@inproceedings{DBLP:conf/coordination/ViroliPB12,
+  author    = {Mirko Viroli and
+               Danilo Pianini and
+               Jacob Beal},
+  title     = {Linda in Space-Time: An Adaptive Coordination Model for Mobile Ad-Hoc
+               Environments},
+  booktitle = {14th International Conference on Coordination Models and Languages (COORDINATION)},
+  pages     = {212--229},
+  year      = {2012},
+  doi       = {10.1007/978-3-642-30829-1_15}
+}        
+@article{VCMZ-TAAS2011,
+        issn = {1556-4665},
+        publisher = {ACM},
+        journal = {ACM Transactions on Autonomous and Adaptive Systems (TAAS)},
+        author = {Viroli, Mirko and Casadei, Matteo and Montagna, Sara and Zambonelli, Franco},
+        title = {Spatial Coordination of Pervasive Services through Chemical-inspired Tuple Spaces},
+        year = 2011,
+        status = {Published},
+        pages = {14:1 -- 14:24},
+        number = 2,
+        venue = {ACM Transactions on Autonomous and Adaptive Systems (TAAS)},
+        address = {New York, NY, USA},
+        volume = 6,
+       _month = {June},
+        doi = {10.1145/1968513.1968517}}
+@article{tota,
+ author = {Mamei, Marco and Zambonelli, Franco},
+ title = {Programming pervasive and mobile computing applications: The {TOTA} approach},
+ journal = {ACM Transactions on Software Engineering Methodologies (TOSEM)},
+ volume = {18},
+ number = {4},
+ year = {2009},
+ issn = {1049-331X},
+ pages = {1--56},
+ doi = {10.1145/1538942.1538945},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ }
+@incollection{GiavittoMGS05,
+year={2005},
+isbn={978-3-540-27884-9},
+booktitle={Unconventional Programming Paradigms},
+volume={3566},
+series={Lecture Notes in Computer Science},
+_editor={Banâtre, Jean-Pierre and Fradet, Pascal and Giavitto, Jean-Louis and Michel, Olivier},
+doi={10.1007/11527800_11},
+title={Computations in Space and Space in Computations},
+publisher={Springer},
+address={Berlin},
+author={Giavitto, Jean-Louis and Michel, Olivier and Cohen, Julien and Spicher, Antoine},
+pages={137-152}
+}
+@techreport{GiavittoMGS02,
+        Author = {Jean-Louis Giavitto and Christophe Godin and Olivier Michel and Przemyslaw Prusinkiewicz},
+        Institution = {Univerite d'Evry, LaMI},
+        Number = {72-2002},
+        Title = {Computational models for integrative and developmental biology},
+        Year = {2002}}
+@phdthesis{nagpalphd,
+        Address = {Cambridge, MA, USA},
+        Author = {Radhika Nagpal},
+        Key = {AITR-2001-008},
+        School = {MIT},
+        Title = {Programmable Self-Assembly: Constructing Global Shape using Biologically-inspired Local Interactions 
+and Origami Mathematics},
+        Year = {2001}
+}
+@inproceedings{welsh2004abstract-regions,
+  title={Programming Sensor Networks Using Abstract Regions.},
+  author={Welsh, Matt and Mainland, Geoffrey},
+  booktitle={NSDI},
+  volume={4},
+  pages={3--3},
+  year={2004}
+}
+@phdthesis{butera,
+        Address = {Cambridge, USA},
+        Author = {William Butera},
+        School = {MIT},
+        Title = {Programming a Paintable Computer},
+        Year = {2002}}
+@inproceedings{Meld,
+        Author = {Ashley-Rollman, Michael P and Goldstein, Seth Copen and Lee, Peter and Mowry, Todd C and Pillai, 
+Padmanabhan},
+        Booktitle = {International Conference on Intelligent Robots and Systems (IROS)},
+        organization={IEEE},
+        Pages = {2794--2800},
+        Title = {Meld: A Declarative Approach to Programming Ensembles},
+        Year = {2007}}
+@article{DBLP:journals/taas/NicolaLPT14,
+  author    = {Rocco {De Nicola} and
+               Michele Loreti and
+               Rosario Pugliese and
+               Francesco Tiezzi},
+  title     = {A Formal Approach to Autonomic Systems Programming: The {SCEL} Language},
+  journal   = {ACM Transactions on Autonomous and Adaptive Systems (TAAS)},
+  volume    = {9},
+  number    = {2},
+  pages     = {7:1--7:29},
+  year      = {2014},
+  doi       = {10.1145/2619998}
+}
+@incollection{hennicker2014helena,
+  title={Foundations for ensemble modeling---the {Helena} approach},
+  author={Hennicker, Rolf and Klarl, Annabelle},
+  booktitle={Specification, Algebra, and Software},
+  pages={359--381},
+  year={2014},
+  publisher={Springer}
+}
+@inproceedings{bures2013deeco,
+  title={DEECO: an ensemble-based component system},
+  author={Bures, Tomas and Gerostathopoulos, Ilias and Hnetynka, Petr and Keznikl, Jaroslav and Kit, Michal and Plasil, Frantisek},
+  booktitle={Proceedings of the 16th International ACM Sigsoft symposium on Component-based software engineering},
+  pages={81--90},
+  year={2013},
+  organization={ACM}
+}
+@article{baude2015gcm-proactive,
+  title={Programming distributed and adaptable autonomous components---the {GCM/ProActive} framework},
+  author={Baude, Fran{\c{c}}oise and Henrio, Ludovic and Ruz, Cristian},
+  journal={Software: Practice and Experience},
+  volume={45},
+  number={9},
+  pages={1189--1227},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+@incollection{esteva2001formal-spec-einstitutions,
+  title={On the formal specification of electronic institutions},
+  author={Esteva, Marc and Rodriguez-Aguilar, Juan-Antonio and Sierra, Carles and Garcia, Pere and Arcos, Josep L},
+  booktitle={Agent mediated electronic commerce},
+  pages={126--147},
+  year={2001},
+  publisher={Springer}
+}
+@article{hubner2007moise-plus,
+  title={Developing organised multiagent systems using the {MOISE+} model: programming issues at the system and agent levels},
+  author={H{\"u}bner, Jomi F and Sichman, Jaime S and Boissier, Olivier},
+  journal={International Journal of Agent-Oriented Software Engineering},
+  volume={1},
+  number={3/4},
+  pages={370--395},
+  year={2007}
+}
+@ARTICLE{Yao02thecougar,
+    author = {Yong Yao and Johannes Gehrke},
+    title = {The {Cougar} Approach to In-Network Query Processing in Sensor Networks},
+  journal={ACM Sigmod record},
+  volume={31},
+  number={3},
+  pages={9--18},
+  year={2002},
+  publisher={ACM}
+}
+@ARTICLE{Curino05mobiledata,
+    author = {Carlo Curino and Matteo Giani and Marco Giorgetta and Alessandro Giusti and Amy L. Murphy and Gian Pietro 
+Picco},
+    title = {Mobile data collection in sensor networks: The {TinyLime} middleware},
+    journal = {Elsevier Pervasive and Mobile Computing Journal},
+    year = {2005},
+    volume = {4},
+    pages = {446--469}
+}
+@inproceedings{regiment,
+        Author = {Ryan Newton and Matt Welsh},
+        Booktitle = {Workshop on Data Management for Sensor Networks},
+        Location = {Toronto, Canada},
+       _month = {August},
+        Pages = {78--87},
+        Title = {Region Streams: Functional Macroprogramming for Sensor Networks},
+        Year = {2004}
+}
